k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cloudops-task-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ecr-registry
      containers:
        - name: frontend
          image: 963640736294.dkr.ecr.eu-central-1.amazonaws.com/cloudops-task-tracker-frontend:manual-v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cloudops-task-tracker
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
